# PDFToolkit

./: .gitignore  .pre-commit-config.yaml  01-docling.py  02-marker.py  03-megaparse.py  04-colqwen-only.py  04-colqwen-search.py  04-llama+colqwen.py  04-llama-only.py  05-ollama-llama.py  06-markitdown.py  README.md  pyproject.toml
